# flexiprocity

./: .gitignore  Dockerfile  README.md  cabal.project  config.nix  deploy.sh  dev-tmux.sh  docker-entrypoint.sh  prod-tarball.sh  run-docker.sh  tmux.sh
.github/: renovate.json
.github/workflows/: actionlint.yml  amend-renovate.yml  build-auth-server.yml  build-deploy.yml  build-haskell.yml  build.yml  cabal.yml  db-test.yml  deploy.yml  nixos-test.yml  pgtap-image.yml  postgraphile-deps-hash.yml  postgres-image.yml  renovate-pr-body.yml  renovate.yml
agent/: LICENSE  build.sh  default.nix  flexiprocity-agent.cabal  flexiprocity-agent.nix
agent/app/: Main.hs
agent/src/: Agent.hs
auth-server/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  auth-server.cabal  auth-server.nix  bluesky-tools.nix  build-using-docker.sh  build.sh  default.nix  shell.nix
auth-server/app/: Main.hs
auth-server/src/: Api.hs  AuthServer.hs  Bluesky.hs  BlueskyApi.hs  ClientAssertion.hs  DPoP.hs  Diagnose.hs  Facebook.hs  Friendica.hs  Google.hs  MakeJwt.hs  OIDC.hs  PKCE.hs  Secrets.hs  Sentry.hs  Sessions.hs  StructuralAeson.hs  Twitter.hs
ci/: amend_renovate_pr_body.py  postgres-pgtap.Dockerfile
frontend/: .gitignore  README.md  build.sh  dark.css  default.nix  driver.js  elm-srcs.nix  elm.json  index.html  light.css  main.css  output-version-file.sh  privacy-policy-version.sh  version-info.sh
frontend/src/: ListZipper.elm  Main.elm  Model.elm  Ports.elm  PrivacyPolicy.elm  SearchWords.elm  Sort.elm  View.elm
frontend/tests/: TestSort.elm
meddler/: .gitignore  LICENSE  build.sh  meddler.cabal
meddler/app/: Main.hs
meddler/src/: Inbox.hs  Meddler.hs  StructuralAeson.hs  Task.hs
nginx/: .gitignore  flexiprocity.conf.template  nginx.conf  nginx.conf.template  standalone.conf  start.sh
postgraphile/: config.nix  package-lock.json  package.json  pnpm-lock.yaml  postgraphile.nix  postgraphile.tags.json5  schema.graphql  start.sh  subscriptions.js  test-sub.sh
schema/: apply.sh  compare.sh  config.nix  create-users.sh  mock.sql  structure.sql  test.sh  test.sql
scripts/: edit-renovate-pr-body.py
secrets/: .gitignore  new-jwt-key.sh
tests/: module.nix
