cabal-version:      3.4

name:               flexiprocity-agent
version:            0.1.0.0
synopsis:           Server which runs misc tasks for flexiprocity
description:
  The flexiprocity-agent does miscellaneous flexiprocity tasks, e.g. looking up
  users in public unauthenticated APIs.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Millwood
maintainer:         thebenmachine+git@gmail.com

category:           Web
build-type:         Simple

common warnings
  ghc-options: -Wall

common language
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DisambiguateRecordFields
    LambdaCase
    OverloadedStrings

library
  import:           warnings
  import:           language
  exposed-modules:  Agent
  other-modules:
  build-depends:
    aeson >= 2.1 && < 2.3,
    async >= 2.2 && <2.3,
    base >=4.16.4.0 && <4.23,
    bluesky-tools >= 0.6 && <0.7,
    containers >=0.6.5.1 && < 0.9,
    http-client >= 0.7 && <0.8,
    http-client-tls >= 0.3 && <0.4,
    network-uri >= 2.6 && <2.7,
    postgresql-simple >= 0.7 && <0.8,
    text >= 2.0 && < 2.2,
  hs-source-dirs:   src

executable flexiprocity-agent
  import:           warnings
  import:           language
  main-is:          Main.hs
  -- other-modules:
  build-depends:
    flexiprocity-agent,
    base >=4.16.4.0 && <4.23,
  hs-source-dirs:   app
