cabal-version:      3.4

name:               auth-server
version:            0.1.0.0
synopsis:           Server which provides jwts
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Millwood
maintainer:         thebenmachine+git@gmail.com

category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common language
    default-language: GHC2021
    default-extensions:
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      OverloadedStrings
    -- other-extensions:

library
    import:           warnings
    import:           language
    exposed-modules:  AuthServer
    other-modules:
      Api
      Facebook
      MakeJwt
    build-depends:
      aeson >= 2.1 && < 2.3,
      base >= 4.16.4.0 && < 4.18,
      bytestring >=0.11.4.0 && < 0.13,
      containers >=0.6.5.1 && < 0.8,
      cryptonite ^>=0.30,
      http-api-data >=0.4 && <0.7,
      http-types ^>=0.12,
      jwt ^>=0.11.0,
      memory ^>=0.18.0,
      mtl >=2.2 && <2.4,
      random ^>=1.2,
      req ^>=3.13.0,
      servant >=0.19.1 && <0.21,
      servant-server >=0.19.1 && <0.21,
      text >=1.2.5.0 && < 2.2,
      time >=1.11.1.1 && <1.13,
      wai ^>=3.2.3,
      wai-cors ^>=0.2.7,
      warp >=3.3.23 && <3.5,
    hs-source-dirs:   src

executable auth-server
    import:           warnings
    import:           language
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      auth-server,
      base >= 4.16.4.0 && < 4.18,
    hs-source-dirs:   app
