cabal-version:      3.4

name:               auth-server
version:            0.1.0.0
synopsis:           Server which provides jwts for flexiprocity
description:
  The auth-server translates authentiction against third-party providers
  into a JWT cookie that the frontend can verify.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Millwood
maintainer:         thebenmachine+git@gmail.com

category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

common language
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DisambiguateRecordFields
    LambdaCase
    OverloadedStrings
  -- other-extensions:

library
  import:           warnings
  import:           language
  exposed-modules:  AuthServer
  other-modules:
    Api
    Bluesky
    ClientAssertion
    Diagnose
    DPoP
    Facebook
    Friendica
    Google
    MakeJwt
    PKCE
    Secrets
    Sessions
    Sentry
  build-depends:
    aeson >= 2.1 && < 2.3,
    async ^>= 2.2,
    base >= 4.16.4.0 && < 4.22,
    bluesky-tools ^>= 0.6,
    bytestring >=0.11.4.0 && < 0.13,
    containers >=0.6.5.1 && < 0.9,
    cookie >=0.4 && <0.6,
    crypton >=0.30 && < 1.1,
    crypton-x509 ^>= 1.7,
    crypton-x509-store ^>= 1.6,
    http-api-data >=0.4 && <0.7,
    http-client ^>= 0.7,
    http-client-tls ^>= 0.3,
    http-types ^>=0.12,
    jose ^>=0.11,
    memory ^>=0.18.0,
    lens >= 5.2 && < 5.4,
    mtl >=2.2 && <2.4,
    network-uri ^>= 2.6,
    oidc-client ^>= 0.8,
    random >=1.2 && <1.4,
    raven-haskell ^>=0.1,
    req >=3.13.4 && <3.14,
    servant >=0.19.1 && <0.21,
    servant-server >=0.19.1 && <0.21,
    text >=1.2.5.0 && < 2.2,
    time >=1.11.1.1 && <1.15,
    wai ^>=3.2.3,
    wai-cors ^>=0.2.7,
    warp >=3.3.23 && <3.5,
  hs-source-dirs:   src

executable auth-server
  import:           warnings
  import:           language
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    auth-server,
    base >= 4.16.4.0 && < 4.22,
  hs-source-dirs:   app
